--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,49 @@
+body{
+  background-color: #242424;
+}
+.App-row{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 .App {
+  background-color: #242424;
+  font-family:'Courier New', Courier, monospace;
+  background-image: url(https://c4.wallpaperflare.com/wallpaper/632/34/549/technology-monitor-alpha-coders-binary-wallpaper-preview.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+  top: 20px;
+  color: #fff;
+  width: 80%;
+  height: 350px;
+}
+.App-inner{
+  background-color: #e4e4e482;
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+  padding: 10px;
+  color: #fff;
+}
+.App-1 {
   text-align: center;
+  background-image: url(https://cutewallpaper.org/28/dark-alley-art-wallpaper/838012374.jpg);
+  background-size: cover;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+  color: #fff;
+  width: 20%;
+  height: 350px;
+}
+.App-Count-h1{
+  font-size: 100px;
+  background-color: #24242493;
+  backdrop-filter: blur(9px);
+  margin: 0;
+  border-radius: 10px;
 }
 
 .App-logo {
@@ -26,6 +70,99 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.Button-background{
+  padding: 5px;
+  border-radius: 10px;
+  margin-top: 5px;
+  background-color: #24242482;
+  backdrop-filter: blur(5px);
+  justify-content: space-between;
+}
+.Button-count-primary{
+  padding: 5px 20%;
+  color: #fff;
+  font-size: 20px;
+  border-radius: 5px;
+  margin-left: 12.5px;
+  border: 0;
+  background-color: #008cff;
+}
+.Button-count-danger{
+  padding: 5px 20%;
+  color: #fff;
+  margin-right: 12.5px;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 0;
+  background-color: #ff0000;
+}
+.h1-dash{
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.P-dash{
+  font-family: Arial, Helvetica, sans-serif;
+  width: 50%;
+}
+.Dash-1{
+  width: 33.33%;
+  height: 200px; 
+  color: #fff;
+  margin: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background-image: linear-gradient(#f8a959, #ad3737) ;
+}
+.Dash-2{
+  width: 33.33%;
+  height: 200px;
+  color: #fff;
+  margin: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background-image: linear-gradient(#418c6c, #d8dd97) ;
+}
+.Dash-3{
+  width: 33.33%;
+  height: 200px;
+  color: #fff;
+  margin: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background-image: linear-gradient(#ff7700, #d9de7d) ;
+}
+.footer{
+  background-color: #696969;
+  border-radius: 5px;
+  width: 97%;
+  margin: 10px;
+  padding: 10px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #242422; 
 }
 
 @keyframes App-logo-spin {
